added average grade endpoint
