# swagger_server/controllers/default_controller.py
@@ -44,3 +44,16 @@ def get_student_by_id(student_id):  # noqa: E501
     :rtype: Student
     """
     return get_by_id(student_id)
+
+
+def get_average_grade(student_id):  # noqa: E501
+    """gets average grade of a student
+
+    Returns the average grade of the student with the given id # noqa: E501
+
+    :param student_id: the uid
+    :type student_id: str
+
+    :rtype: float
+    """
+    return average_grade(student_id)
